--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </div>
 
 <script>
-const apiKey= "780b20bfc0aa4007d659274d8cc1d027";
+const apiKey= "your-api-key-here";
 const apiUrl= "https://api.openweathermap.org/data/2.5/weather?units=metric&q=";
 
 const searchBox= document.querySelector(".search input");
